--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,14 +13,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Install Android SDK 21
-      run: sdkmanager "platforms;android-21"
     - name: set up JDK 8
       uses: actions/setup-java@v4
       with:
         java-version: '8.0.302+8'
         distribution: 'temurin'
         cache: gradle
+    - name: Set up Android SDK
+      uses: android-actions/setup-android@v3
+    - name: Add SDK tools to PATH
+      run: echo "$ANDROID_HOME/cmdline-tools/latest/bin" >> $GITHUB_PATH
+    - name: Install Android SDK 21
+      run: sdkmanager "platforms;android-21"
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
