--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,6 +10,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+        SKIP_JDK_VERSION_CHECK: true
 
     steps:
     - uses: actions/checkout@v4
